maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: not enough arguments for method casesAdjacentes: (pos: Array[Int])Array[Array[Int]].
Unspecified value parameter pos.
        for (i <- casesAdjacentes()) {
                                 ^